--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,15 +2,23 @@ name: CI
 
 on:
   push:
+    branches:
+      - main
   pull_request:
-  schedule:
-    - cron:  '0 0 * * 1' # weekly
+    branches:
+      - main
+
 
 jobs:
   test:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v3
+    - uses: actions/setup-go@v3
+      with:
+        go-version: '1.19'
+
     - name: Get dependencies
       run: go get -v -t -d ./...
     - name: go build
