--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,7 +4,12 @@ updates:
     directory: /
     schedule:
       interval: monthly
+    commit-message:
+      prefix: "chore: "
+
   - package-ecosystem: gomod
     directory: /
     schedule:
       interval: monthly
+    commit-message:
+      prefix: "chore: "
