ci: do run Go tests
Apparently, what happens in GHA CI now is:

> go test -test.v -race -cover
> shell: /usr/bin/bash -e {0}
> ?   	github.com/polyfloyd/go-errorlint	[no test files]

Fix this.

Signed-off-by: Kir Kolyshkin <kolyshkin@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
     - name: go build
       run: go build -v
     - name: go test
-      run: go test -test.v -race -cover
+      run: go test -test.v -race -cover ./...
 
   conventional-commits:
     runs-on: ubuntu-latest
